<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.nbempire.superml.component.activity.ChooseSubscriptionActivity">

    <TextView
        android:text="@string/choose_subscription_introduction_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_choose_subscription_introduction_text" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowest_price"
        android:id="@+id/lowestPrice"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/activity_choose_subscription_introduction_text"
        android:layout_marginTop="@dimen/separation_between_subscription_types" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_higher_than_average"
        android:id="@+id/priceHigherThanAverage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/lowestPrice"
        android:layout_alignLeft="@id/lowestPrice"
        android:layout_marginTop="@dimen/separation_between_subscription_types" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_less_than_average"
        android:id="@+id/priceLesserThanAverage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/priceHigherThanAverage"
        android:layout_alignLeft="@id/lowestPrice"
        android:layout_marginTop="@dimen/separation_between_subscription_types" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_new"
        android:id="@+id/allNew"
        android:layout_marginTop="@dimen/separation_between_subscription_types"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/priceLesserThanAverage"
        android:layout_alignLeft="@id/lowestPrice" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/finish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveSubscriptions" />

</RelativeLayout>
